# admin-python-web

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.py
src/main/: __init__.py  app.py  config.py
src/main/tool/: NeteaseCloudMusic.py
src/main/utils/: SqlUtils.py  logger.py  utils.py
tests/: test_utils.py
